# Mola_bot

./: .env  .env.dev  .env.prod  .gitignore  bot.py  pyproject.toml  requirements.txt
src/plugins/: aut_response_1.py  bot_help.py  bot_help_0.py  bot_help_1.py  bot_help_10.py  bot_help_2.py  bot_help_3.py  bot_help_4.py  bot_help_5.py  bot_help_6.py  bot_help_7.py  bot_help_8.py  bot_help_9.py  calendar.py  dungeon_note.py  lottery.py  market.py  market_fanti.py  party_finder.py  precious.py  union.py
src/plugins/nonebot-plugin-bfchat-master/nonebot_plugin_bfchat/: bf2042.py  config.py  template.html  template2042.html
src/plugins/nonebot-plugin-send/nonebot-plugin-send-0.1.4/: pyproject.toml  setup.py
src/plugins/nonebot-plugin-send/nonebot-plugin-send-0.1.4/nonebot_plugin_send.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/plugins/nonebot_plugin_xiuxian_2/xiuxian/: __init__.py
src/plugins/nonebot_plugin_xiuxian_2/xiuxian/xiuxian_back/: config.json  shop.json
src/plugins/nonebot_plugin_xiuxian_2/xiuxian/xiuxian_boss/: boss_info.json  config.json
src/plugins/nonebot_plugin_xiuxian_2/xiuxian/xiuxian_rift/: config.json
src/plugins_function/PicMenu/: __init__.py  img_tool.py  metadata.py
