[project]
name = "nonebot-plugin-send"
version = "0.1.4"
description = "一个基于nonebot的反馈通知插件"
authors = [
    {name = "sena-nana", email = "851183156@qq.com"},
]
dependencies = [
    "nonebot-adapter-onebot>=2.1.3",
    "nonebot2>=2.0.0b4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
